# trading_microservices

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.local  Makefile  README.md  check_api.py  check_zmq.py  clean_test_out.txt  codebase_doc.md  data_gateway.b64  debug_signals.py  docker-compose.ingestion.yml  docker-compose.local.yml  docker-compose.yml  docker_compose.b64  env.b64  failed_points_review.md  migrate_shadow.py  py_files.tmp  quant_test_out.txt  quant_test_out2.txt  requirements.txt  run_local.py  shoonya_login_debug.json  startup.sh  test_alert.py  test_out.txt  test_out2.txt  test_output.txt  test_results.txt  test_results_ascii.txt  test_shoonya.py  update_db_layer9.py
.streamlit/: config.toml
core/: __init__.py  alerts.py  auth.py  db_retry.py  execution_wrapper.py  greeks.py  health.py  logger.py  margin.py  messages.proto  mq.py  network_utils.py  shared_memory.py  shm.py
cpp_gateway/: CMakeLists.txt
cpp_gateway/include/: redis_writer.h  shard.h  tick_normalizer.h  zmq_publisher.h
cpp_gateway/proto/: messages.proto
cpp_gateway/src/: main.cpp  redis_writer.cpp  shard.cpp  tick_normalizer.cpp  zmq_publisher.cpp
daemons/: __init__.py  cloud_publisher.py  data_gateway.py  data_logger.py  fii_dii_fetcher.py  hmm_engine.py  init_db.py  liquidation_daemon.py  live_bridge.py  market_sensor.py  market_sensor_final.py  market_sensor_restore.py  meta_router.py  ms_h1.py  ms_h2.py  order_reconciler.py  paper_bridge.py  post_market_audit.py  pre_market_validator.py  regime_detector.py  registry.py  shoonya_gateway.py  snapshot_manager.py  strat_eod_vwap.py  strat_expiry.py  strat_gamma.py  strat_lead_lag.py  strat_oi_pulse.py  strat_reversion.py  strategy_engine.py  system_controller.py  tick_sensor.py  tiny_recorder.py  unified_bridge.py
dashboard/: app.py  app_backup.py
data/: macro_calendar.json
docs/: DeepDive  Engineering.md  Functional Specification  Functional.md  Funtional Specification.md  PreMarket_Checklist.md  QuantThesis.md  Technical Specification  Technical Specification.md  Technical.md  codebase_audit.md  debug_suite.md  detailed codebase walkthrough.md  functional_spec.md  functional_specifications.md  granular_requirements_audit.md  requirements.md  technical_spec.md  technical_specifications.md
infrastructure/: deploy_cloudrun.py  deploy_scheduler.py  gcp_provision.py  gcp_scheduler_func.py  main.py  wait_for_ssh.py
rust_extensions/tick_engine/: Cargo.toml
rust_extensions/tick_engine/src/: lib.rs
rust_extensions/tick_engine/src/modules/: greeks.rs  mod.rs  ofi.rs  vpin.rs
scripts/: append_v70_docs.py  backup_db.sh  debug_shoonya_login.py  find_sensex.py  restore_db.sh  seed_firestore.py
tests/: conftest.py  test_audit_remediation.py  test_capital_allocation.py  test_composite_alpha_scorer.py  test_eod_summary_report.py  test_execution.py  test_hierarchical_router.py  test_hybrid_sizing.py  test_latency.py  test_liquidation_barriers.py  test_meta_router_providers.py  test_microstructure_refinements.py  test_order_reconciler.py  test_polyglot_redis_sync.py  (+12 more)
(+95 files in other folders)
