[package]
name = "tick_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "tick_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.16"
memmap2 = "0.9"
chrono = "0.4"
